--- a/src/components/NextEvent/NextEvent.css
+++ b/src/components/NextEvent/NextEvent.css
@@ -26,6 +26,17 @@
   border-radius: 5px;
   overflow: auto;
 }
+.event-card--detalhes {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 250px;
+  height: 250px;
+  padding: 25px;
+  border: 1px solid var(--color-blue-red);
+  border-radius: 5px;
+  overflow: auto;
+}
 
 /* Largura da barra de rolagem */
 .event-card::-webkit-scrollbar {
@@ -55,6 +66,15 @@
   cursor: pointer;
 }
 
+.event-card__connect-link--off {
+  font-family: Poppins-Medium;
+  font-size: 1.125rem;
+  color: var(--color-dark-blue);
+  text-align: center;
+  text-decoration: none;
+  cursor: not-allowed;
+}
+
 
 @media screen and (min-width: 992px) {
   .banner {
@@ -73,5 +93,9 @@
   .event-card {
     width: 220px;
     height: 220px;
+  }
+  .event-card--detalhes {
+    width: 420px;
+    height: 420px;
   }
 }
