--- a/src/components/NextEvent/NextEvent.css
+++ b/src/components/NextEvent/NextEvent.css
@@ -72,7 +72,7 @@
   color: var(--color-dark-blue);
   text-align: center;
   text-decoration: none;
-  cursor: not-allowed;
+  cursor: pointer;
 }
 
 
